Overflow fix

--- a/.dev/Frontend/src/scss/imports/helpers.scss
+++ b/.dev/Frontend/src/scss/imports/helpers.scss
@@ -56,6 +56,10 @@
     }
 }
 
+.tl-overflow--auto {
+    overflow: auto;
+}
+
 .tl-push {
     &--right {
         float: right;
